<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Работа из шрифтами">
        <CheckBoxPreference
            android:key="Режим открытия"
            android:summary="Открыть файл при запуске приложения"
            android:title="Открыть"
            android:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Настройка шрифтов">
        <EditTextPreference
            android:defaultValue="10"
            android:dialogTitle="Введите размер от 10 до 30"
            android:key="Размер"
            android:summary="Установка шрифта"
            android:title="Размер шрифта"/>
    </PreferenceCategory>
    <ListPreference
        android:key="@string/pref_style"
        android:title="Стиль для шрифта"
        android:summary="Устанавливает стиль для шрифта"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="Выберите стиль для шрифта"/>
    <PreferenceScreen
        android:key="@string/pref_color"
        android:title="Цвет текста"
        android:summary="Устанавливает цвет текста" >
        <CheckBoxPreference
        android:key="@string/pref_color_black"
        android:title="Черный"
        android:defaultValue="true"
        android:summary="Устанавливает черный цвет" />
        <CheckBoxPreference
            android:key="@string/pref_color_red"
            android:title="Красный"
            android:defaultValue="true"
            android:summary="Устанавливает красный цвет" />
        <CheckBoxPreference
        android:key="@string/pref_color_green"
        android:title="Зеленый"
        android:defaultValue="true"
        android:summary="Устанавливает зеленый цвет" />
        <CheckBoxPreference
            android:key="@string/pref_color_blue"
            android:title="Синий"
            android:defaultValue="true"
            android:summary="Устанавливает синий цвет" />

    </PreferenceScreen>
</PreferenceScreen>